@@ -34,7 +34,7 @@ namespace Castle.MicroKernel.Tests.SpecializedResolvers
 			                	.ConfigureFor<EmptyServiceComposite>(r => r.Forward<EmptyServiceComposite>()));
 
 			var composite = kernel.Resolve<EmptyServiceComposite>();
-			Assert.AreEqual(2, composite.Inner.Length);
+			Assert.AreEqual(4, composite.Inner.Length);
 		}
 
 		[Test]
